test/bad/lr0.pacc
/*
nopacc1 "pacc: fatal: left recursion in rule \`sub'"
*/

sub <- sub "-" digit / digit
digit <- "0" / "1"
